# barrett

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: c-cpp.yml
LICENSES/: 3ds-cmake
cmake/: convert_nm_sysv_to_md.cmake
res/: main.lua
res/actors/: example.lua
src/: HashTable.c  HashTable.h  WinRott.h  _engine.h  _rt_acto.h  _rt_buil.h  _rt_com.h  _rt_dman.h  _rt_door.h  _rt_draw.h  _rt_floo.h  _rt_game.h  _rt_in.h  _rt_main.h  _rt_map.h  _rt_menu.h  _rt_msg.h  _rt_net.h  _rt_play.h  _rt_rand.h  _rt_scal.h  _rt_soun.h  _rt_stat.h  _rt_str.h  _rt_ted.h  _rt_util.h  _rt_vid.h  _w_wad.h  _z_zone.h  cin_actr.c  cin_actr.h  cin_def.h  cin_efct.c  cin_efct.h  cin_evnt.c  cin_evnt.h  cin_glob.c  cin_glob.h  cin_main.c  cin_main.h  (+103 more)
src/audiolib/: _multivc.h  debugio.h  dma.h  dpmi.h  dsl.c  fx_man.c  fx_man.h  interrup.h  linklist.h  ll_man.c  ll_man.h  multivoc.c  multivoc.h  nodpmi.c  pitch.c  pitch.h  platform.h  standard.h  user.c  user.h  usrhooks.c  usrhooks.h
